welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:0: error: class MethodsPicture needs to be abstract, since variable c is not defined
(Note that variables need to be initialized to be defined)
class MethodsPicture extends SimpleBuggle {
      ^